# dimos

./: .dockerignore  .editorconfig  .envrc  .envrc.nix  .envrc.venv  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .style.yapf  AGENTS.md  AUTONOMY_STACK_README.md  LICENSE  MANIFEST.in  NEWREADME.MD  README.md  README_installation.md  default.env  flake.nix  mkdocs.yml  mypy_strict.ini  pyproject.toml  requirements.txt  run.sh  setup.py  uv.lock.REMOVED.git-id
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml  spec.yml
.github/workflows/: _docker-build-template.yml  cleanup.yml  code-cleanup.yml  docker.yml  fast-docs.yml  macos.yml  readme.md  stale.yml  tests.yml
assets/: TestSim3.usda  dimensionalascii.txt  dimos_interface.gif.REMOVED.git-id  drone_foxglove_lcm_dashboard.json  framecount.mp4.REMOVED.git-id  license_file_header.txt  simple_demo.mp4.REMOVED.git-id  simple_demo_small.gif.REMOVED.git-id  test.png.REMOVED.git-id  trimmed_video_office.mov.REMOVED.git-id
assets/agent/: prompt.txt  prompt_agents.txt
assets/foxglove_dashboards/: go2.json  unitree.json
autoresearch/: optimizations.py
autoresearch/go2_cpu/: .gitignore  README.md  _startup_patch.py  eval.py  optimizations.py  run.sh
dimos/: __init__.py  conftest.py  constants.py  test_no_init_files.py  test_no_sections.py
dimos/agents/: __init__.py  _skill_exports.py  agent.py  agent_config.py  agent_ctransformers_gguf.py  agent_huggingface_local.py  agent_huggingface_remote.py  agent_message.py  agent_spec.py  agent_test_runner.py  agent_types.py  cerebras_agent.py  claude_agent.py  conftest.py  constants.py  demo_agent.py  planning_agent.py  spec.py  system_prompt.py  test_agent.py  test_agent_direct.py  test_agent_fake.py  test_agent_image_message.py  test_agent_message_streams.py  test_agent_pool.py  test_agent_tools.py  test_agent_with_modules.py  test_base_agent_text.py  test_conversation_history.py  test_gateway.py  test_mock_agent.py  test_simple_agent_module.py  test_stash_agent.py  testing.py  vlm_agent.py  vlm_agent_spec.py  vlm_stream_tester.py  voice_control.py  web_human_input.py
dimos/agents2/: __init__.py  agent.py  conftest.py  constants.py  ollama_agent.py  spec.py  system_prompt.py  test_agent.py  test_agent_direct.py  test_agent_fake.py  test_mock_agent.py  test_stash_agent.py  testing.py
dimos/agents_deprecated/: agent.py  agent_config.py  agent_message.py  agent_types.py  claude_agent.py
dimos/control/: README.md  __init__.py  blueprints.py  components.py  coordinator.py  hardware_interface.py  orchestrator.py  task.py  test_control.py  tick_loop.py
dimos/core/: README_BLUEPRINTS.md  __init__.py  _dask_exports.py  _protocol_exports.py  _test_future_annotations_helper.py  blueprints.py  core.py  daemon.py  dimos.py  docker_build.py  docker_module.py  docker_runner.py  docker_worker_manager.py  global_config.py  library_config.py  module.py  module_coordinator.py  native_module.py  o3dpickle.py  repl_server.py  resource.py  rpc_client.py  run_registry.py  skill_module.py  stream.py  test_blueprints.py  test_cli_stop_status.py  test_core.py  test_daemon.py  test_e2e_daemon.py  test_lcmmsg_gen.py  test_mcp_integration.py  test_module_coordinator.py  test_modules.py  test_native_module.py  test_native_rebuild.py  test_repl_server.py  test_rpcstress.py  test_stream.py  test_worker.py  (+5 more)
dimos/dashboard/: README.md  __init__.py  dimos.rbl  module.py  rerun_init.py  rerun_module.py  server.py
dimos/data/: data_pipeline.py  depth.py  labels.py  pointcloud.py  segment.py
dimos/e2e_tests/: conftest.py  lcm_spy.py  test_control_coordinator.py  test_control_orchestrator.py  test_dimos_cli_e2e.py  test_patrol_and_follow.py  test_person_follow.py  test_scan_and_follow_person.py  test_smartnav_replay.py  test_spatial_memory.py
dimos/environment/: agent_environment.py  colmap_environment.py  environment.py
dimos/exceptions/: agent_memory_exceptions.py  agent_token_strategy_exceptions.py
dimos/navigation/smartnav/modules/far_planner/cpp/: CMakeLists.txt  flake.nix  main.cpp
dimos/navigation/smartnav/modules/local_planner/cpp/: CMakeLists.txt  flake.nix  main.cpp
dimos/navigation/smartnav/modules/terrain_analysis/cpp/: CMakeLists.txt  flake.nix  main.cpp
docs/: VIEWER_BACKENDS.md  ci.md  data.md  development.md  hooks.py  jetson.MD  modules.md  modules_CN.md  package_usage.md  robot_architecture.md  testing_stream_reply.md
examples/language-interop/cpp/: CMakeLists.txt  README.md  main.cpp
examples/language-interop/rust/: Cargo.toml
examples/language-interop/rust/src/: main.rs
installer/: installer.pyz.REMOVED.git-id  requirements.txt
lazy_loader/: __init__.pyi
onnx/: metric3d_vit_small.onnx
ros_docker_integration/: ros_launch_wrapper.py
scripts/: install.sh
terraform/: main.tf  variables.tf
tests/: agent_manip_flow_fastapi_test.py  agent_manip_flow_flask_test.py  agent_memory_test.py  colmap_test.py  run.py  run_go2_ros.py  run_navigation_only.py  run_standalone.py  run_webrtc.py  simple_agent_test.py  test_agent.py  test_agent_alibaba.py  test_agent_ctransformers_gguf.py  test_agent_huggingface_local.py  test_agent_huggingface_local_jetson.py  test_agent_huggingface_remote.py  test_audio_agent.py  test_audio_robot_agent.py  test_cerebras_unitree_ros.py  test_claude_agent_query.py  test_claude_agent_skills_query.py  test_command_pose_unitree.py  test_dashboard_server_thread.py  test_header.py  test_huggingface_llm_agent.py  test_ibvs.py  test_manipulation_agent.py  test_manipulation_perception_pipeline.py  test_manipulation_perception_pipeline.py.py  test_manipulation_pipeline_single_frame.py  test_manipulation_pipeline_single_frame_lcm.py  test_monitor_skill.py  test_move_vel_unitree.py  test_navigate_to_object_robot.py  test_navigation_skills.py  test_object_detection_agent_data_query_stream.py  test_object_detection_stream.py  test_object_tracking_module.py  test_object_tracking_webcam.py  test_object_tracking_with_qwen.py  (+38 more)
(+1767 files in other folders)
