```toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dimos"
version = "0.1.0"
description = "A fork of dimensionalOS/dimos — modular robotics and agent orchestration framework"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "dimos contributors" }
]
keywords = ["robotics", "agents", "ros2", "llm", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.0",
  "reactivex>=4.0",
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "Pillow>=10.0",
  "httpx>=0.25",
  "openai>=1.0",
  "python-dotenv>=1.0",
  "loguru>=0.7",
]

[project.optional-dependencies]
ros2 = [
  "rclpy",
]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "ruff>=0.1",
  "mypy>=1.7",
  "pre-commit>=3.5",
]

[project.urls]
Homepage = "https://github.com/your-org/dimos"
Issues = "https://github.com/your-org/dimos/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
log_cli = true
# bumped up to DEBUG locally so I can see agent step-by-step output while experimenting
log_cli_level = "DEBUG"
# -v for full test names; -s to see print() output from tests (useful when debugging agents)
# removed --tb=short here so I get full tracebacks — easier to trace agent failures
# removed -s flag: it floods the terminal when running the full suite; add it back manually when needed
# added --no-header to cut down on the pytest banner noise in my terminal
addopts = "-v --tb=long --no-header"

[tool.coverage.run]
source = ["src/dimos"]
omit = ["tests/*"]

[tool.coverage.report]
# show lines that weren't covered so I know what to test next
show_missing = true
# skip files that are 100% covered to keep the report focused on gaps
skip_covered = true
```